[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-img-comparison-slider"
version = "0.0.1"
description = "Reflex custom component img-comparison-slider"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Carlos", email = "carlbrownson@proton.me" }]
keywords = ["reflex","reflex-custom-components"]

dependencies = ["reflex>=0.4.2"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]
homepage = "https://github.com/carlosabadia/img_comparison_slider"
source = "https://github.com/carlosabadia/img_comparison_slider"

[project.optional-dependencies]
dev = ["build", "twine"]


[tool.setuptools.packages.find]
where = ["custom_components"]